k8s/API/devops-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-api
  template:
    metadata:
      labels:
        app: devops-api
    spec:
      containers:
        - name: devops-container
          image: karolwisniewski/devops-api:latest
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "0.5"
              memory: "256Mi"
