k8s/API/devops-service.yml
apiVersion: v1
kind: Service
metadata:
  name: devops-service
spec:
  selector:
    app: devops-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
