k8s/API/devops-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ingress
spec:
  rules:
  # minikube ip 
  # C:\Windows\System32\drivers\etc\hosts 
  # <minikube-ip> your-domain.com
    - host: api.devops.project
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-service
                port:
                  number: 80
